@@ -1,24 +1,24 @@
-<div class="menu" align="left"> <b><a href="http://sdcc.sourceforge.net/"><i>SDCC Home</i></a></b>
+<div class="menu" align="left"> <b><a href="/"><i>SDCC Home</i></a></b>
   <div class="submenu">
-    <a href="http://sdcc.sourceforge.net/index.php#News"><i>News</i></a><br />
-    <a href="http://sdcc.sourceforge.net/index.php#Platforms"><i>Platforms</i></a><br />
-    <a href="http://sdcc.sourceforge.net/index.php#Download"><i>Download</i></a><br />
-    <a href="http://sdcc.sourceforge.net/index.php#Support"><i>Support</i></a><br />
-    <a href="http://sdcc.sourceforge.net/index.php#Who"><i>Who</i></a><br />
+    <a href="/index.php#News"><i>News</i></a><br />
+    <a href="/index.php#Platforms"><i>Platforms</i></a><br />
+    <a href="/index.php#Download"><i>Download</i></a><br />
+    <a href="/index.php#Support"><i>Support</i></a><br />
+    <a href="/index.php#Who"><i>Who</i></a><br />
   </div>
   <br />
-  <b><a href="http://sdcc.sourceforge.net/snap.php"><i>Snapshots</i></a></b>
+  <b><a href="/snap.php"><i>Snapshots</i></a></b>
   <div class="submenu">
-    <a href="http://sdcc.sourceforge.net/snap.php#Linux"><i>Linux</i></a><br />
-    <a href="http://sdcc.sourceforge.net/snap.php#Windows"><i>Windows</i></a><br />
-    <a href="http://sdcc.sourceforge.net/snap.php#Source"><i>Source</i></a><br />
+    <a href="/snap.php#Linux"><i>Linux</i></a><br />
+    <a href="/snap.php#Windows"><i>Windows</i></a><br />
+    <a href="/snap.php#Source"><i>Source</i></a><br />
   </div>
   <br />
-  <b><a href="http://sdcc.sourceforge.net/doc/"><i>Documentation</i></a></b>
+  <b><a href="/doc/"><i>Documentation</i></a></b>
   <div class="submenu">
-    <a href="http://sdcc.sourceforge.net/doc/sdccman.html/"><i>SDCC Manual (html</i></a>/<a href="http://sdcc.sourceforge.net/doc/sdccman.pdf"><i>pdf)</i></a><br />
-    <a href="http://sdcc.sourceforge.net/doc/test_suite_spec.html/"><i>Test Suite (html</i></a>/<a href="http://sdcc.sourceforge.net/doc/test_suite_spec.pdf"><i>pdf)</i></a><br />
-    <a href="http://sdcc.sourceforge.net/doc/cdbfileformat.html/"><i>CDB Format (html</i></a>/<a href="http://sdcc.sourceforge.net/doc/cdbfileformat.pdf"><i>pdf)</i></a><br />
+    <a href="/doc/sdccman.html/"><i>SDCC Manual (html</i></a>/<a href="http://sdcc.sourceforge.net/doc/sdccman.pdf"><i>pdf)</i></a><br />
+    <a href="/doc/test_suite_spec.html/"><i>Test Suite (html</i></a>/<a href="http://sdcc.sourceforge.net/doc/test_suite_spec.pdf"><i>pdf)</i></a><br />
+    <a href="/doc/cdbfileformat.html/"><i>CDB Format (html</i></a>/<a href="http://sdcc.sourceforge.net/doc/cdbfileformat.pdf"><i>pdf)</i></a><br />
   </div>
   <br />
   <b><a href="http://sourceforge.net/projects/sdcc"><i>SDCC at SourceForge</i></a></b>
@@ -27,7 +27,7 @@
     <a href="http://svn.sourceforge.net/viewcvs.cgi/sdcc/trunk/sdcc/"><i>SDCC Subversion Repository</i></a><br />
   </div>
   <br />
-  <b><a href="http://sdcc.sourceforge.net/release_wiki/"><i>SDCC Release Wiki</i></a></b><br />
+  <b><a href="/release_wiki/"><i>SDCC Release Wiki</i></a></b><br />
   <br />
-  <b><a href="http://sdcc.sourceforge.net/links.php"><i>Links and More!</i></a></b><br />
+  <b><a href="/links.php"><i>Links and More!</i></a></b><br />
 </div>
